<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cardUsers"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp"
    app:cardCornerRadius="30dp"
    app:cardElevation="5dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/black"
        android:gravity="center_vertical|center_horizontal">

        <TextView
            android:id="@+id/txtNameUser"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textStyle="bold"
            android:text="@string/txtNameUser"
            android:layout_marginTop="10dp"
            android:layout_gravity="center"
            android:textAlignment="center"
            android:textColor="@color/white"
            tools:ignore="InefficientWeight"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="@id/imgUser"/>

        <ImageView
            android:id="@+id/imgUser"
            android:layout_width="0dp"
            android:layout_height="110dp"
            android:contentDescription="@string/imgUser"
            android:layout_marginTop="10dp"
            android:src="@drawable/icoon_feed"
            app:layout_constraintTop_toBottomOf="@id/txtNameUser"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/txtAgeUser"/>

        <TextView
            android:id="@+id/txtAgeUser"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="17sp"
            android:text="@string/txtAgeUser"
            android:maxLines="1"
            android:textColor="@color/white"
            android:layout_marginEnd="40dp"
            android:layout_marginStart="20dp"
            tools:ignore="InefficientWeight"
            app:layout_constraintTop_toTopOf="@id/imgUser"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/txtSexUser"/>

        <TextView
            android:id="@+id/txtSexUser"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="17sp"
            android:text="@string/txtSexUser"
            android:maxLines="1"
            android:textColor="@color/white"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="40dp"
            tools:ignore="InefficientWeight"
            app:layout_constraintTop_toBottomOf="@id/txtAgeUser"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="@id/imgUser"/>

        <TextView
            android:id="@+id/txtDescriptionUser"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:text="@string/txtDescriptionUser"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="50dp"
            tools:ignore="InefficientWeight"
            app:layout_constraintTop_toBottomOf="@id/imgUser"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="@id/imgUser"
            app:layout_constraintBottom_toBottomOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>