<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cardUsers"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintElementInclude"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:background="@color/black">

        <ImageView
            android:id="@+id/iconElement"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:contentDescription="@string/imgElement"
            android:src="@drawable/icon_edit"
            app:layout_constraintTop_toTopOf="@+id/constraintElementInclude"
            app:layout_constraintBottom_toBottomOf="@+id/constraintElementInclude"
            app:layout_constraintStart_toStartOf="@+id/constraintElementInclude"
            app:layout_constraintEnd_toStartOf="@id/txtElement"/>

        <TextView
            android:id="@+id/txtElement"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:maxWidth="200dp"
            android:maxLines="1"
            android:text="@string/txtTextElement"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:layout_constraintTop_toTopOf="@+id/constraintElementInclude"
            app:layout_constraintBottom_toBottomOf="@+id/constraintElementInclude"
            app:layout_constraintStart_toEndOf="@id/iconElement"/>

        <TextView
            android:id="@+id/txtNumberElement"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:text="@string/txtNumberElement"
            android:textColor="@color/white"
            android:textSize="20sp"
            tools:ignore="TextSizeCheck"
            app:layout_constraintTop_toTopOf="@+id/constraintElementInclude"
            app:layout_constraintBottom_toBottomOf="@+id/constraintElementInclude"
            app:layout_constraintStart_toEndOf="@+id/txtElement"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:id="@+id/linearEditTextElement"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:visibility="gone"
        android:background="@color/black"
        android:layout_marginTop="80dp">

        <EditText
            android:id="@+id/editChangeText"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:hint="Editar texto"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textColorHint="@color/white" />

        <ImageButton
            android:id="@+id/btnAccept"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:background="@color/transparent"
            android:contentDescription="Modificar texto"
            android:padding="5dp"
            android:src="@drawable/icon_check" />

    </LinearLayout>


</androidx.cardview.widget.CardView>



